--- a/css/diseno1.css
+++ b/css/diseno1.css
@@ -4,17 +4,18 @@
   box-sizing: border-box;
 }
 
-body {
-  padding-left: 10%;
-  padding-right: 10%;
+body{
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 header {
   background-image: url(../img/design1_image1.jpg);
   background-repeat: no-repeat;
   background-size: contain;
-  background-size: 100% 100%;
-  height: 250px;
+  background-size: 70% 100%;
+  background-position: center;
+  height: 300px;
 }
 
 h1{
@@ -31,6 +32,13 @@ aside{
   vertical-align: top;
 }
 
+nav {
+  display: inline-block;
+  width: 25%;
+  padding-left: 30px;
+  margin-top: 30px;
+}
+
 nav > a {
   color:blue;
   display: block;
@@ -42,12 +50,6 @@ nav > .actual{
     color: black;
 }
 
-nav {
-  display: inline-block;
-  width: 25%;
-  padding-left: 30px;
-  margin-top: 30px;
-}
 
 #titulo {
   text-align: center;
@@ -58,10 +60,11 @@ nav {
   width: 100%;
 }
 
-.logo, h3 {
+h3 {
   display: inline-block;
   vertical-align: middle;
-  
+  position: absolute;
+  font-size: 25px;
 }
 
 img {
@@ -71,11 +74,6 @@ img {
   bottom: 60px;
   height: 150px;
   width: 150px;
-}
-
-h3{
-  position: absolute;
-  font-size: 25px;
 }
 
 .section {
@@ -108,11 +106,6 @@ p {
 
 #contacto > p {
   margin-bottom: 20px;
-}
-
-body{
-    padding-left: 10%;
-    padding-right: 10%
 }
 
 .diseno2 {
