--- a/css/diseno2.css
+++ b/css/diseno2.css
@@ -4,17 +4,25 @@
   box-sizing: border-box;
 }
 
-#header2 {
-  background-image: url(../img/design2_image1.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-size: 100% 100%;
-  border: 1px solid black;
-  height: 300px;
-  text-align: right;
-  display: block;
+body {
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
+h1{
+  font-size: 45px;
+  text-align: left;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+nav {
+  display: inline;
+  width: 100%;
+  padding-left: 10px;
+  margin-top: 30px;
+  text-align: right;
+}
 
 nav > a {
   color:blue;
@@ -27,75 +35,100 @@ nav > a {
   border: 1px solid black;
   text-align: right;
   box-shadow: 2px 5px 3px gray;
+  position: relative;
+  bottom: 10px;
 }
 
-nav > #actual{
+nav > .actual{
   text-decoration: none;
   background-color: green;
 }
 
-nav {
-  display: inline;
-  width: 100%;
-  padding-left: 10px;
-  margin-top: 30px;
+#header2 {
+  background-image: url(../img/design2_image1.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-size: 100% 100%;
+  border: 1px solid black;
+  height: 300px;
   text-align: right;
+  display: block;
 }
 
-section {
-  width: 70%;
-  display: inline-block;
-  padding-top: 30px;
-}
-
-.section {
-  width: 70%;
-  display: inline-block;
-  padding-top: 30px;
-}
-
-.logo {
+#contenido {
   display: inline;
-  margin-left: 500px;
-  text-align: right;
+}
+
+aside{
+  width:20%;
+  display:inline;
+  vertical-align: top;
+}
+
+img {
+  display: inline;
+  margin-left: 5px;
+  margin-right: 30px;
+  height: 250px;
+  width: 250px;
+  margin-top: 50px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #titulo {
   text-align: center;
   color: black;
   background-color: white;
-  height: 30px;
+  height: 40px;
   padding-top: 5px;
-  display: block;
   border: 1px solid black;
+  margin-top: -1px;
 }
 
-p {
-  padding-left: 20px;
+h3 {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 25px;
 }
 
-h4 {
-  font-style: italic;
+.section {
+  width: 70%;
+  display: inline-block;
+  padding-top: 30px;
+  margin-left: 20px;
 }
 
 article {
   margin-bottom: 20px;
+  width: 70%;
 }
 
-body {
-  padding-left: 10%;
-  padding-right: 10%;
+h4 {
+  font-style: italic;
+  display:block;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-#contenido {
-  display: block;
+h4.about {
+  font-style:normal;
+  font-weight: bold;
+  display:block;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+p {
+  text-indent: 30px;
+}
+
+#contacto{
+  margin-top: 20px;
+}
+#contacto > p {
+  margin-bottom: 30px;
 }
 
 .diseno1 {
   display: none;
-}
-
-h1{
-  text-align: left;
-  margin-bottom: 20px;;
 }
