--- a/css/diseno1.css
+++ b/css/diseno1.css
@@ -7,6 +7,7 @@
 body{
     padding-left: 10%;
     padding-right: 10%;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 header {
@@ -108,6 +109,6 @@ p {
   margin-bottom: 20px;
 }
 
-.diseno2 {
+figure, .diseno2, #imagenaside {
   display: none;
 }
