--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,30 @@
   box-sizing: border-box;
 }
 
-#header2 {
-  background-image: url(../img/design2_image1.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-size: 100% 100%;
-  border: 1px solid black;
-  height: 300px;
-  text-align: right;
-  display: block;
+body {
+  margin-top: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
+h1{
+  font-size: 45px;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  background-color: black;
+  color: yellow;
+  vertical-align: middle;
+}
+
+nav {
+  display: inline;
+  width: 100%;
+  padding-left: 10px;
+  margin-top: 30px;
+  text-align: right;
+}
 
 nav > a {
   color:blue;
@@ -27,75 +40,117 @@ nav > a {
   border: 1px solid black;
   text-align: right;
   box-shadow: 2px 5px 3px gray;
+  position: relative;
+  bottom: 10px;
 }
 
-nav > #actual{
+nav > .actual{
   text-decoration: none;
   background-color: green;
 }
 
-nav {
-  display: inline;
-  width: 100%;
-  padding-left: 10px;
-  margin-top: 30px;
+#header2 {
+  background-image: url(../img/design2_image1.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-size: 100% 100%;
+  border: 1px solid black;
+  height: 300px;
   text-align: right;
+  display: block;
 }
 
-section {
-  width: 70%;
+#contenido {
+  display: inline;
+}
+
+aside{
+  width:30%;
+  display:inline;
+  vertical-align: top;
+  position:relative;
+}
+
+img {
+  margin-left: 5px;
+  margin-right: 30px;
+  height: 200px;
+  width: 200px;
+  margin-top: 50px;
   display: inline-block;
-  padding-top: 30px;
+  position:relative;
+  bottom: 500px;
+}
+
+figure{
+  display:inline-block;
+  position:relative;
+}
+
+#imagenaside {
+  margin: 0px;
+  margin-top: 30px;
+  margin-left: auto;
+  height: 240px;
+  width: 240px;
+  display: inline;
+  position: absolute;
+  top: -250px;
+  right: 1px;   
+}
+
+#titulo {
+  text-align: center;
+  color: white;
+  background-color: black;
+  height: 40px;
+  padding-top: 5px;
+  width: 100%;
+}
+
+h3 {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 25px;
 }
 
 .section {
   width: 70%;
   display: inline-block;
   padding-top: 30px;
-}
-
-#logo {
-  display: inline;
-  margin-left: 500px;
-  text-align: right;
-}
-
-#titulo {
-  text-align: center;
-  color: black;
-  background-color: white;
-  height: 30px;
-  padding-top: 5px;
-  display: block;
-  border: 1px solid black;
-}
-
-p {
-  padding-left: 20px;
-}
-
-h4 {
-  text-decoration: italic;
+  margin-left: 50px;
 }
 
 article {
   margin-bottom: 20px;
+  width: 70%;
 }
 
-body {
-  padding-left: 10%;
-  padding-right: 10%;
+h4 {
+  font-style: italic;
+  display:block;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-#contenido {
-  display: block;
+h4.about {
+  font-style:normal;
+  font-weight: bold;
+  display:block;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+p {
+  text-indent: 30px;
 }
 
-.diseno1 {
+#contacto{
+  margin-top: 20px;
+}
+#contacto > p {
+  margin-bottom: 30px;
+}
+
+.diseno1{
   display: none;
-}
-
-h1{
-  text-align: left;
-  margin-bottom: 20px;;
 }
