--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  margin-top: 20px;
   padding-left: 10%;
   padding-right: 10%;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
@@ -14,39 +13,46 @@ body {
 
 /*----------------- Header-----------------*/
 
-h1{
+#might {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  height: 100px;
+}
+
+#logo {
+  flex-shrink: 0;
+  width: 150px;
+  flex-shrink: 0;
+}
+
+h1 {
   font-size: 45px;
   text-align: center;
-  margin-bottom: 5px;
-  margin-top: 10px;
-  background-color: black;
   color: yellow;
-  vertical-align: middle;
+  flex-grow: 1;
+  text-align: center;
 }
 
 nav {
-  display: inline;
-  width: 100%;
-  padding-left: 10px;
-  margin-top: 30px;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding-right: 10px;
+  flex-wrap: wrap;
 }
 
 nav > a {
-  color:blue;
-  display: inline;
-  margin-right: 10px;
-  color:white;
+  color: blue;
+  color: white;
   background-color: blue;
   text-decoration: none;
   padding: 10px;
   border: 1px solid black;
-  text-align: right;
   box-shadow: 2px 5px 3px gray;
-
 }
 
-nav > .actual{
+nav > .actual {
   text-decoration: none;
   background-color: green;
 }
@@ -66,9 +72,10 @@ nav > .actual{
   text-align: center;
   color: white;
   background-color: black;
-  height: 40px;
   padding-top: 5px;
-  width: 100%;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
 h3 {
@@ -77,48 +84,41 @@ h3 {
   font-size: 25px;
 }
 
+h3#sub {
+  font-size: 15px;
+  text-decoration: underline;
+  border: 1px red dashed;
+}
+
 /*-----------------Contenido---------------*/
 #contenido {
-  display: inline;
-  display:flex;
-  display:flexbox;
+  display: flex;
+  align-content: space-around;
 }
 
 /*-----------Lateral--------------*/
-aside{
-  width:30%;
-  display:inline;
-  vertical-align: top;
-}
-
-figure{
-  display:inline-block;
-}
-
-img {
-  margin-left: 5px;
-  margin-right: 30px;
-  height: 200px;
-  width: 200px;
-  margin-top: 50px;
-  display: inline-block;
+aside {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 #imagenaside {
-  margin: 0px;
-  margin-top: 30px;
-  margin-left: auto;
   height: 240px;
   width: 240px;
-  display: inline;
+  justify-content: center;
+  align-items: center;
 }
 
 /*----------------Central-----------------*/
 .section {
-  width: 70%;
-  display: inline-block;
+  width: 100%;
+  display: flex;
   padding-top: 30px;
   margin-left: 50px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 article {
@@ -128,30 +128,113 @@ article {
 
 h4 {
   font-style: italic;
-  display:block;
+  display: block;
   font-size: 20px;
   margin-bottom: 10px;
+  
 }
 
 h4.about {
-  font-style:normal;
+  text-indent: 30px;
+  font-style: normal;
   font-weight: bold;
-  display:block;
+  display: block;
   font-size: 20px;
   margin-bottom: 10px;
 }
-p {
+
+p.indent {
   text-indent: 30px;
 }
 
-#contacto{
+#contacto {
   margin-top: 20px;
 }
+
 #contacto > p {
   margin-bottom: 30px;
 }
 
-/*-----------Oculto -------------------*/
-.diseno1{
-  display: none;
+#datos {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+#datos > p {
+  margin-bottom: 10px;
+}
+
+.minfoot {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+/* ---------------LISTAS-------------- */
+ol.k {
+  list-style-type: lower-alpha;
+}
+
+ul.circle {
+  list-style-type: circle;
+  margin-left: 20px;
+  padding-left: 20px;
+}
+
+li.indent {
+  margin-left: 20px;
+}
+
+li > p {
+  margin-left: -20px;
+}
+
+dd {
+  display: block;
+  margin-bottom: 1em;
+}
+
+dl {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+dt:first-of-type {
+  margin-top: -20px;
+}
+dt {
+  display: block;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+/* ------------------TABLA-------------------- */
+table {
+  width: 75%;
+  justify-content: center;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+caption{
+  color: red;
+  padding-bottom: 10px;
+}
+td,
+th {
+  padding: 8px;
+  border-bottom: 1px solid black;
+}
+
+th {
+  background-color: darkolivegreen;
+  color: whitesmoke;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
