task3 - update mas lindo

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
+  background-image: url(../img/ice.jpg);
+  background-size: 100% 100%;
+  background-repeat:no-repeat;
 }
 
 /*----------------- Header-----------------*/
@@ -24,6 +27,7 @@ body {
   flex-shrink: 0;
   width: 150px;
   flex-shrink: 0;
+  align-self: baseline;
 }
 
 h1 {
@@ -50,6 +54,11 @@ nav > a {
   padding: 10px;
   border: 1px solid black;
   box-shadow: 2px 5px 3px gray;
+}
+
+nav >a:hover{
+  text-transform: uppercase;
+  transform: scale(1.5);
 }
 
 nav > .actual {
@@ -99,15 +108,17 @@ h3#sub {
 /*-----------Lateral--------------*/
 aside {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  /* align-items: center; */
+  justify-content: center;
+  padding: 10px;
+  width: fit-content;
 }
 
 #imagenaside {
-  height: 240px;
-  width: 240px;
-  justify-content: center;
-  align-items: center;
+  height: 300px;
+  width: 300px;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 /*----------------Central-----------------*/
@@ -115,7 +126,7 @@ aside {
   width: 100%;
   display: flex;
   padding-top: 30px;
-  margin-left: 50px;
+  margin-left: 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -143,7 +154,7 @@ h4.about {
   margin-bottom: 10px;
 }
 
-p.indent {
+p.indent, dd.indent {
   text-indent: 30px;
 }
 
@@ -155,22 +166,6 @@ p.indent {
   margin-bottom: 30px;
 }
 
-#datos {
-  margin-top: 15px;
-  display: flex;
-  flex-direction: column;
-  width: 75%;
-}
-
-#datos > p {
-  margin-bottom: 10px;
-}
-
-.minfoot {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
 /* ---------------LISTAS-------------- */
 ol.k {
   list-style-type: lower-alpha;
@@ -180,6 +175,7 @@ ul.circle {
   list-style-type: circle;
   margin-left: 20px;
   padding-left: 20px;
+  text-indent: 0px;
 }
 
 li.indent {
@@ -205,6 +201,7 @@ dl {
 
 dt:first-of-type {
   margin-top: -20px;
+  
 }
 dt {
   display: block;
@@ -212,6 +209,7 @@ dt {
   font-size: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color: rgb(0, 255, 0, 0.3)
 }
 /* ------------------TABLA-------------------- */
 table {
@@ -236,5 +234,35 @@ th {
   color: whitesmoke;
 }
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: rgb(0, 255, 0, 0.3)
+}
+
+/* ------datos tabla ----- */
+#datos {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+#datos > p {
+  margin-bottom: 10px;
+}
+
+.minfoot {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.minfoot>p:first-child {
+  flex: 0 1 100%;
+}
+
+.minfoot > p{
+  flex: 1 0 50%;
+}
+
+.minfoot > a{
+  color: green;
 }
