--- a/css/style.css
+++ b/css/style.css
@@ -2,42 +2,33 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
-
 body {
   padding-left: 10%;
   padding-right: 10%;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   background-image: url(../img/ice.jpg);
   background-size: 100% 100%;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
 }
-
 /*----------------- Header-----------------*/
-
 #might {
   background-color: black;
   display: flex;
   align-items: center;
   height: 100px;
 }
-
 #logo {
   flex-shrink: 0;
   width: 150px;
-  flex-shrink: 0;
   align-self: baseline;
 }
-
 h1 {
   font-size: 45px;
   text-align: center;
   color: yellow;
   flex-grow: 1;
-  text-align: center;
 }
-
 nav {
   display: flex;
   justify-content: flex-end;
@@ -45,7 +36,6 @@ nav {
   padding-right: 10px;
   flex-wrap: wrap;
 }
-
 nav > a {
   color: blue;
   color: white;
@@ -55,17 +45,14 @@ nav > a {
   border: 1px solid black;
   box-shadow: 2px 5px 3px gray;
 }
-
-nav >a:hover{
+nav > a:hover {
   text-transform: uppercase;
   transform: scale(1.5);
 }
-
 nav > .actual {
   text-decoration: none;
   background-color: green;
 }
-
 #header2 {
   background-image: url(../img/design2_image1.jpg);
   background-repeat: no-repeat;
@@ -86,41 +73,37 @@ nav > .actual {
   display: flex;
   flex-direction: column;
 }
-
 h3 {
   display: inline-block;
   vertical-align: middle;
   font-size: 25px;
 }
-
-h3#sub {
+h3 > #sub {
   font-size: 15px;
   text-decoration: underline;
   border: 1px red dashed;
 }
-
 /*-----------------Contenido---------------*/
 #contenido {
   display: flex;
   align-content: space-around;
 }
-
 /*-----------Lateral--------------*/
 aside {
   display: flex;
-  /* align-items: center; */
+  /* align-items: center;
+     */
   justify-content: center;
   padding: 10px;
   width: fit-content;
 }
-
 #imagenaside {
   height: 300px;
   width: 300px;
   /* justify-content: center;
-  align-items: center; */
+     align-items: center;
+     */
 }
-
 /*----------------Central-----------------*/
 .section {
   width: 100%;
@@ -131,21 +114,17 @@ aside {
   align-items: center;
   justify-content: center;
 }
-
 article {
   margin-bottom: 20px;
   width: 70%;
 }
-
 h4 {
   font-style: italic;
   display: block;
   font-size: 20px;
   margin-bottom: 10px;
-  
 }
-
-h4.about {
+.about {
   text-indent: 30px;
   font-style: normal;
   font-weight: bold;
@@ -153,44 +132,36 @@ h4.about {
   font-size: 20px;
   margin-bottom: 10px;
 }
-
-p.indent, dd.indent {
+p.indent,
+dd.indent {
   text-indent: 30px;
 }
-
 #contacto {
   margin-top: 20px;
 }
-
 #contacto > p {
   margin-bottom: 30px;
 }
-
 /* ---------------LISTAS-------------- */
-ol.k {
+.k {
   list-style-type: lower-alpha;
 }
-
-ul.circle {
+.circle {
   list-style-type: circle;
   margin-left: 20px;
   padding-left: 20px;
   text-indent: 0px;
 }
-
 li.indent {
   margin-left: 20px;
 }
-
 li > p {
   margin-left: -20px;
 }
-
 dd {
   display: block;
   margin-bottom: 1em;
 }
-
 dl {
   display: block;
   margin-top: 1em;
@@ -198,10 +169,8 @@ dl {
   margin-left: 0;
   margin-right: 0;
 }
-
 dt:first-of-type {
   margin-top: -20px;
-  
 }
 dt {
   display: block;
@@ -209,7 +178,7 @@ dt {
   font-size: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-  background-color: rgb(0, 255, 0, 0.3)
+  background-color: rgb(0, 255, 0, 0.3);
 }
 /* ------------------TABLA-------------------- */
 table {
@@ -217,9 +186,9 @@ table {
   justify-content: center;
   text-align: center;
   border-collapse: collapse;
+  margin-bottom: 10px;
 }
-
-caption{
+caption {
   color: red;
   padding-bottom: 10px;
 }
@@ -228,15 +197,13 @@ th {
   padding: 8px;
   border-bottom: 1px solid black;
 }
-
 th {
   background-color: darkolivegreen;
   color: whitesmoke;
 }
 tr:nth-child(even) {
-  background-color: rgb(0, 255, 0, 0.3)
+  background-color: rgb(0, 255, 0, 0.3);
 }
-
 /* ------datos tabla ----- */
 #datos {
   margin-top: 25px;
@@ -244,25 +211,29 @@ tr:nth-child(even) {
   flex-direction: column;
   width: 75%;
 }
-
 #datos > p {
   margin-bottom: 10px;
 }
-
 .minfoot {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-
-.minfoot>p:first-child {
+.minfoot > p:first-child {
   flex: 0 1 100%;
 }
-
-.minfoot > p{
+.minfoot > p {
   flex: 1 0 50%;
 }
-
-.minfoot > a{
+.minfoot > a {
   color: green;
+}
+
+#mapas {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  row-gap: 10px;
+  column-gap: 10px;
 }
