task4 - Media Query

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ tr:nth-child(even) {
   justify-content: space-around;
   align-content: space-around;
   row-gap: 10px;
+  width: 80%;
 }
 
 /* --------------FORM ---------- */
@@ -256,11 +257,14 @@ legend {
   flex-wrap: nowrap;
 }
 
-.doble {
+.double {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
   width: 100%;
+  display: flex;
+  gap: 20px;
+  padding: 10px 0;
 }
 
 .row {
@@ -269,18 +273,17 @@ legend {
   justify-content: space-evenly;
   flex-wrap: wrap;
   width: auto;
-  align-items:baseline;
+  align-items: baseline;
 }
 
-.doble.row {
+.double.row {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
-  align-items:baseline;
-
+  align-items: baseline;
 }
-doble>div {
+double > div {
   flex: 50%;
   box-sizing: border-box;
 }
@@ -290,7 +293,13 @@ doble>div {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  width: 75%;
+  width: 90%;
+}
+
+.gap {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 input[type="text"] {
@@ -324,4 +333,541 @@ input:-internal-autofill-selected {
 .firma,
 .firma > div {
   padding: 10px 0px;
+}
+
+select {
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid black;
+  outline-width: 0;
+  box-shadow: none;
+  width: auto;
+  flex-grow: 1;
+}
+
+.btn_reistr {
+  margin: 10px 0; 
+  color: white;
+  background-color: green;
+  padding: 10px;
+  border: 1px solid black;
+  box-shadow: 2px 5px 3px gray;
+  font-size: 16px;
+  border-radius: 12px;
+  width: 100%;
+}
+
+.btn_reistr:hover {
+  text-transform: uppercase;
+}
+
+
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+/* ----------------------------------------------------------------- */
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  /* ----General ------ */
+  /*----------------- Header-----------------*/
+  #might {
+    background-color: black;
+    display: flex;
+    align-items: center;
+    height: 100px;
+  }
+  #logo {
+    flex-shrink: 0;
+    width: 100px;
+    align-self: baseline;
+  }
+  h1 {
+    font-size: 30px;
+    text-align: center;
+    color: yellow;
+    flex-grow: 1;
+  }
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+    padding-right: 5px;
+    flex-wrap: wrap;
+    font-size: 14px;
+  }
+  nav > a {
+    color: blue;
+    color: white;
+    background-color: blue;
+    text-decoration: none;
+    padding: 5px;
+    border: 1px solid black;
+    box-shadow: 2px 5px 3px gray;
+  }
+  nav > a:hover {
+    text-transform: uppercase;
+    transform: scale(1.5);
+  }
+  nav > .actual {
+    text-decoration: none;
+    background-color: green;
+  }
+  #header2 {
+    background-image: url(../img/design2_image1.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: 100% 100%;
+    border: 1px solid black;
+    height: 200px;
+    text-align: right;
+    display: block;
+  }
+  /*--------------Titulo----------------*/
+  #titulo {
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+  h3 {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 15px;
+  }
+  h3.sub {
+    font-size: small;
+    text-decoration: underline;
+    border: 1px red dashed;
+  }
+
+  h5 {
+    font-size: small;
+  }
+  /*-----------------Contenido---------------*/
+  #contenido {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+  }
+  /*-----------Lateral--------------*/
+  aside {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 100%;
+  }
+  #imagenaside {
+    height: 150px;
+    width: 150px;
+    justify-content: center;
+    align-items: center;
+  }
+  /*----------------Central-----------------*/
+  .section {
+    width: 90%;
+    display: flex;
+    padding-top: 30px;
+    margin-left: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  article {
+    margin-bottom: 20px;
+    width: 70%;
+  }
+  h4 {
+    font-style: italic;
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .about {
+    text-indent: 30px;
+    font-style: normal;
+    font-weight: bold;
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  p.indent,
+  dd.indent {
+    text-indent: 30px;
+  }
+  #contacto {
+    margin-top: 20px;
+  }
+  #contacto > p {
+    margin-bottom: 30px;
+  }
+  /* ---------------LISTAS-------------- */
+  .k {
+    list-style-type: lower-alpha;
+  }
+  .circle {
+    list-style-type: circle;
+    margin-left: 20px;
+    padding-left: 20px;
+    text-indent: 0px;
+  }
+  li.indent {
+    margin-left: 20px;
+  }
+  li > p {
+    margin-left: -20px;
+  }
+  dd {
+    display: block;
+    margin-bottom: 1em;
+    font-size: 13px;
+  }
+  dl {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  dt:first-of-type {
+    margin-top: -20px;
+  }
+  dt {
+    display: block;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(0, 255, 0, 0.3);
+  }
+  /* ------------------TABLA-------------------- */
+  table {
+    padding: 15px;
+    width: 75%;
+    justify-content: center;
+    text-align: center;
+    border-collapse: collapse;
+    margin-bottom: 10px;
+    font-size: small;
+  }
+
+  /* ------datos tabla ----- */
+  #datos {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+  }
+  #datos > p {
+    margin-bottom: 5px;
+  }
+  .minfoot {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .minfoot > p:first-child {
+    flex: 0 1 100%;
+  }
+  .minfoot > p {
+    flex: 1 0 50%;
+  }
+
+  /* ------------- MAPAS -------- */
+  #mapas {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+    row-gap: 10px;
+  }
+
+  iframe {
+    max-width: 100%;
+    height: auto;
+    width: fit-content;
+  }
+
+  /* --------------FORM ---------- */
+
+  fieldset {
+    padding: 10px;
+  }
+
+  fieldset h4 {
+    font-size: 16px;
+  }
+
+  legend {
+    font-style: italic;
+    display: block;
+    font-size: medium;
+    font-weight: bold;
+  }
+
+  label {
+    font-size: medium;
+  }
+
+  .personal {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+
+  .double {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: auto;
+    align-items: baseline;
+  }
+
+  .double.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    align-items: baseline;
+  }
+
+  double > div {
+    flex: 50%;
+    box-sizing: border-box;
+  }
+
+  .colums {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 75%;
+  }
+
+  input[type="text"] {
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid black;
+    outline-width: 0;
+    box-shadow: none;
+    width: auto;
+    flex-grow: 1;
+  }
+
+  input[type="text"]:focus {
+    background: rgba(255, 255, 255, 0.299);
+    border: none;
+    border-bottom: 2px solid black;
+    outline-width: 0;
+    background-color: rgba(232, 240, 254, 0.31);
+  }
+
+  input:-internal-autofill-selected {
+    appearance: menulist-button;
+    background-image: none !important;
+    background-color: -internal-light-dark(
+      rgba(232, 240, 254, 0.392),
+      rgba(70, 90, 126, 0.145)
+    ) !important;
+    color: fieldtext !important;
+  }
+
+  .firma,
+  .firma > div {
+    padding: 10px 0px;
+  }
+}
+
+
+
+
+
+
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+/* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+   /* ----General ------ */
+  /*----------------- Header-----------------*/
+  h1 {
+    font-size: 40px;
+  }
+
+  #header2 {
+    height: 250px;
+  }
+  /*--------------Titulo----------------*/
+  h3 {
+    font-size: 18px;
+  }
+  h3.sub {
+    font-size: medium;
+    text-decoration: underline;
+    border: 1px red dashed;
+  }
+
+  h5 {
+    font-size: medium;
+  }
+  /*-----------------Contenido---------------*/
+  #contenido {
+    flex-direction: column;
+  }
+  /*-----------Lateral--------------*/
+  aside {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 100%;
+  }
+  #imagenaside {
+    height: 200px;
+    width: 200px;
+  }
+  /*----------------Central-----------------*/
+
+  h4 {
+    font-style: italic;
+    display: block;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  p.indent,
+  dd.indent {
+    text-indent: 30px;
+  }
+  #contacto {
+    margin-top: 20px;
+  }
+  #contacto > p {
+    margin-bottom: 30px;
+  }
+  /* ---------------LISTAS-------------- */
+  dd {
+    font-size: medium;
+  }
+  dt {
+    font-size: 18px;
+  }
+  /* ------------------TABLA-------------------- */
+  table {
+    justify-content: center;
+    font-size: medium;
+  }
+
+  /* ------------- MAPAS -------- */
+  #mapas {
+    row-gap: 15px;
+    width: 90%;
+  }
+
+  iframe {
+    max-width: 100%;
+    height: auto;
+    width: fit-content;
+  }
+
+  /* --------------FORM ---------- */
+
+  fieldset {
+    padding: 10px;
+  }
+
+  fieldset h4 {
+    font-size: 18px;
+  }
+
+  legend {
+    font-size: 18px;
+  }
+
+  label {
+    font-size: medium;
+  }
+
+  .double {
+    flex-direction: row;
+  }
+
+}
+
+
+
+
+
+/* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
+/* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
+/* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
+/* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
+/* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
+@media only screen and (min-width: 769px) and (max-width: 1440px) {
+     /* ----General ------ */
+  /*----------------- Header-----------------*/
+  h1 {
+    font-size: 40px;
+  }
+
+  #header2 {
+    height: 250px;
+  }
+  /*--------------Titulo----------------*/
+  h3 {
+    font-size: 18px;
+  }
+  h3.sub {
+    font-size: medium;
+    text-decoration: underline;
+    border: 1px red dashed;
+  }
+
+  h5 {
+    font-size: medium;
+  }
+  /*-----------------Contenido---------------*/
+  /*-----------Lateral--------------*/
+  aside {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 10px;
+    width: 30%;
+  }
+  /*----------------Central-----------------*/
+
+  }
+  /* ---------------LISTAS-------------- */
+
+  /* ------------------TABLA-------------------- */
+
+  /* ------------- MAPAS -------- */
+  #mapas {
+    row-gap: 15px;
+  }
+
+
+  /* --------------FORM ---------- */
+
+
+
 }
