task4 - vuelta links

--- a/css/style.css
+++ b/css/style.css
@@ -704,7 +704,7 @@ select {
 /* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
 /* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
 /* -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-. */
-@media only screen and (min-width: 425px) and (max-width: 768px) {
+@media only screen and (min-width: 426px) and (max-width: 768px) {
    /* ----General ------ */
   /*----------------- Header-----------------*/
   h1 {
@@ -820,7 +820,7 @@ select {
 /* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
 /* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
 /* -o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o- */
-@media only screen and (min-width: 768px) and (max-width: 1440px) {
+@media only screen and (min-width: 769px) and (max-width: 1440px) {
      /* ----General ------ */
   /*----------------- Header-----------------*/
   h1 {
@@ -867,3 +867,6 @@ select {
 
   /* --------------FORM ---------- */
 
+
+
+}
